@@ -11,7 +11,7 @@ def test_hfm_cp(cleanup):
     eval $(huckle env)
 
     # we setup a custom credentials file for the test run
-    echo -e "[config]
+    echo -e "[core]
 core.auth = False" > ./noauth_credentials
 
     gunicorn --workers=1 --threads=1 -b 0.0.0.0:18000 "hcli_core:connector(plugin_path=\\\"`hcli_core sample hfm`\\\", config_path=\\\"./noauth_credentials\\\")" --daemon --log-file=./gunicorn-noauth.log --error-logfile=./gunicorn-noauth-error.log --capture-output
@@ -40,7 +40,6 @@ core.auth = False" > ./noauth_credentials
     echo -n '{"hello":"world"}' > hello.json
     cat hello.json | hfm cp -l ./hello.json
     hfm cp -r hello.json > hello1.json
-    kill $(ps aux | grep '[g]unicorn' | awk '{print $2}')
     cat hello1.json
     rm hello.json
     rm hello1.json
@@ -49,6 +48,10 @@ core.auth = False" > ./noauth_credentials
     p2 = subprocess.Popen(['bash', '-c', hello], stdin=subprocess.PIPE, stdout=subprocess.PIPE, stderr=subprocess.PIPE)
     out, err = p2.communicate()
     result = out.decode('utf-8')
+    error = err.decode('utf-8')
+
+    if err is not None:
+        print(f"STDERR: {err}")
 
     assert('{"hello":"world"}\n' == result)
 
